src/libqimage.h

typedef struct QByteArrayView QByteArrayView;
typedef struct QIODevice QIODevice;
typedef struct QImage QImage;
typedef struct QPixelFormat QPixelFormat;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QTransform QTransform;
int QImage_ToImageFormat(QPixelFormat* format);
int QImage_Metric(const QImage* self, int metric);
QImage* QImage_Copy1(const QImage* self, QRect* rect);
QImage* QImage_ConvertToFormat22(const QImage* self, int f, int flags);
QImage* QImage_ConvertToFormat3(const QImage* self, int f, libqt_list /* of unsigned int */ colorTable, int flags);
QImage* QImage_ConvertedTo2(const QImage* self, int f, int flags);
void QImage_ConvertTo2(QImage* self, int f, int flags);
QImage* QImage_CreateAlphaMask1(const QImage* self, int flags);
QImage* QImage_CreateHeuristicMask1(const QImage* self, bool clipTight);
QImage* QImage_CreateMaskFromColor2(const QImage* self, unsigned int color, int mode);
QImage* QImage_Scaled3(const QImage* self, int w, int h, int aspectMode);
QImage* QImage_Scaled4(const QImage* self, int w, int h, int aspectMode, int mode);
QImage* QImage_Scaled2(const QImage* self, QSize* s, int aspectMode);
QImage* QImage_Scaled32(const QImage* self, QSize* s, int aspectMode, int mode);
QImage* QImage_ScaledToWidth2(const QImage* self, int w, int mode);
QImage* QImage_ScaledToHeight2(const QImage* self, int h, int mode);
QImage* QImage_Transformed2(const QImage* self, QTransform* matrix, int mode);
QImage* QImage_Mirrored1(const QImage* self, bool horizontally);
QImage* QImage_Mirrored2(const QImage* self, bool horizontally, bool vertically);
void QImage_Mirror1(QImage* self, bool horizontally);
void QImage_Mirror2(QImage* self, bool horizontally, bool vertically);
void QImage_InvertPixels1(QImage* self, int param1);
bool QImage_Load2(QImage* self, libqt_string fileName, const char* format);
bool QImage_LoadFromData22(QImage* self, QByteArrayView* data, const char* format);
bool QImage_LoadFromData3(QImage* self, const unsigned char* buf, int lenVal, const char* format);
bool QImage_LoadFromData23(QImage* self, libqt_string data, const char* format);
bool QImage_Save2(const QImage* self, libqt_string fileName, const char* format);
bool QImage_Save3(const QImage* self, libqt_string fileName, const char* format, int quality);
bool QImage_Save22(const QImage* self, QIODevice* device, const char* format);
bool QImage_Save32(const QImage* self, QIODevice* device, const char* format, int quality);
QImage* QImage_FromData22(QByteArrayView* data, const char* format);
QImage* QImage_FromData3(const unsigned char* data, int size, const char* format);
QImage* QImage_FromData23(libqt_string data, const char* format);
libqt_string QImage_Text1(const QImage* self, libqt_string key);
QImage* QImage_MirroredHelper(const QImage* self, bool horizontal, bool vertical);
QImage* QImage_RgbSwappedHelper(const QImage* self);
void QImage_MirroredInplace(QImage* self, bool horizontal, bool vertical);
void QImage_RgbSwappedInplace(QImage* self);
QImage* QImage_ConvertToFormatHelper(const QImage* self, int format, int flags);
bool QImage_ConvertToFormatInplace(QImage* self, int format, int flags);
QImage* QImage_SmoothScaled(const QImage* self, int w, int h);
void QImage_DetachMetadata(QImage* self);
void QImage_DetachMetadata1(QImage* self, bool invalidateCache);