src/libqimage.bf

	[LinkName("QImage_ToImageFormat")]
	public static extern int64 QImage_ToImageFormat(QPixelFormat format);
	[LinkName("QImage_Metric")]
	public static extern int32 QImage_Metric(void* c_this, int64 metric);
	[LinkName("QImage_MirroredHelper")]
	public static extern QImage QImage_MirroredHelper(void* c_this, bool horizontal, bool vertical);
	[LinkName("QImage_RgbSwappedHelper")]
	public static extern QImage QImage_RgbSwappedHelper(void* c_this);
	[LinkName("QImage_MirroredInplace")]
	public static extern void QImage_MirroredInplace(void* c_this, bool horizontal, bool vertical);
	[LinkName("QImage_RgbSwappedInplace")]
	public static extern void QImage_RgbSwappedInplace(void* c_this);
	[LinkName("QImage_ConvertToFormatHelper")]
	public static extern QImage QImage_ConvertToFormatHelper(void* c_this, int64 format, int64 flags);
	[LinkName("QImage_ConvertToFormatInplace")]
	public static extern bool QImage_ConvertToFormatInplace(void* c_this, int64 format, int64 flags);
	[LinkName("QImage_SmoothScaled")]
	public static extern QImage QImage_SmoothScaled(void* c_this, int32 w, int32 h);
	[LinkName("QImage_DetachMetadata")]
	public static extern void QImage_DetachMetadata(void* c_this);
	[LinkName("QImage_Copy1")]
	public static extern QImage QImage_Copy1(void* c_this, QRect rect);
	[LinkName("QImage_ConvertToFormat22")]
	public static extern QImage QImage_ConvertToFormat22(void* c_this, int64 f, int64 flags);
	[LinkName("QImage_ConvertToFormat3")]
	public static extern QImage QImage_ConvertToFormat3(void* c_this, int64 f, uint32[] colorTable, int64 flags);
	[LinkName("QImage_ConvertedTo2")]
	public static extern QImage QImage_ConvertedTo2(void* c_this, int64 f, int64 flags);
	[LinkName("QImage_ConvertTo2")]
	public static extern void QImage_ConvertTo2(void* c_this, int64 f, int64 flags);
	[LinkName("QImage_CreateAlphaMask1")]
	public static extern QImage QImage_CreateAlphaMask1(void* c_this, int64 flags);
	[LinkName("QImage_CreateHeuristicMask1")]
	public static extern QImage QImage_CreateHeuristicMask1(void* c_this, bool clipTight);
	[LinkName("QImage_CreateMaskFromColor2")]
	public static extern QImage QImage_CreateMaskFromColor2(void* c_this, uint32 color, int64 mode);
	[LinkName("QImage_Scaled3")]
	public static extern QImage QImage_Scaled3(void* c_this, int32 w, int32 h, int64 aspectMode);
	[LinkName("QImage_Scaled4")]
	public static extern QImage QImage_Scaled4(void* c_this, int32 w, int32 h, int64 aspectMode, int64 mode);
	[LinkName("QImage_Scaled2")]
	public static extern QImage QImage_Scaled2(void* c_this, QSize s, int64 aspectMode);
	[LinkName("QImage_Scaled32")]
	public static extern QImage QImage_Scaled32(void* c_this, QSize s, int64 aspectMode, int64 mode);
	[LinkName("QImage_ScaledToWidth2")]
	public static extern QImage QImage_ScaledToWidth2(void* c_this, int32 w, int64 mode);
	[LinkName("QImage_ScaledToHeight2")]
	public static extern QImage QImage_ScaledToHeight2(void* c_this, int32 h, int64 mode);
	[LinkName("QImage_Transformed2")]
	public static extern QImage QImage_Transformed2(void* c_this, QTransform matrix, int64 mode);
	[LinkName("QImage_Mirrored1")]
	public static extern QImage QImage_Mirrored1(void* c_this, bool horizontally);
	[LinkName("QImage_Mirrored2")]
	public static extern QImage QImage_Mirrored2(void* c_this, bool horizontally, bool vertically);
	[LinkName("QImage_Mirror1")]
	public static extern void QImage_Mirror1(void* c_this, bool horizontally);
	[LinkName("QImage_Mirror2")]
	public static extern void QImage_Mirror2(void* c_this, bool horizontally, bool vertically);
	[LinkName("QImage_InvertPixels1")]
	public static extern void QImage_InvertPixels1(void* c_this, int64 param1);
	[LinkName("QImage_Load2")]
	public static extern bool QImage_Load2(void* c_this, char8[] fileName, char8[] format);
	[LinkName("QImage_LoadFromData22")]
	public static extern bool QImage_LoadFromData22(void* c_this, char8[] data, char8[] format);
	[LinkName("QImage_LoadFromData3")]
	public static extern bool QImage_LoadFromData3(void* c_this, uint8 buf, int32 lenVal, char8[] format);
	[LinkName("QImage_LoadFromData23")]
	public static extern bool QImage_LoadFromData23(void* c_this, uint8[] data, char8[] format);
	[LinkName("QImage_Save2")]
	public static extern bool QImage_Save2(void* c_this, char8[] fileName, char8[] format);
	[LinkName("QImage_Save3")]
	public static extern bool QImage_Save3(void* c_this, char8[] fileName, char8[] format, int32 quality);
	[LinkName("QImage_Save22")]
	public static extern bool QImage_Save22(void* c_this, QIODevice device, char8[] format);
	[LinkName("QImage_Save32")]
	public static extern bool QImage_Save32(void* c_this, QIODevice device, char8[] format, int32 quality);
	[LinkName("QImage_FromData22")]
	public static extern QImage QImage_FromData22(char8[] data, char8[] format);
	[LinkName("QImage_FromData3")]
	public static extern QImage QImage_FromData3(uint8 data, int32 size, char8[] format);
	[LinkName("QImage_FromData23")]
	public static extern QImage QImage_FromData23(uint8[] data, char8[] format);
	[LinkName("QImage_Text1")]
	public static extern char8[] QImage_Text1(void* c_this, char8[] key);
	[LinkName("QImage_DetachMetadata1")]
	public static extern void QImage_DetachMetadata1(void* c_this, bool invalidateCache);
}